# py-tuto-4-java-guy

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: Learn Python in Y Minutes (2026_5_29 01：19：53).html
docs/python-3.14-docs-html/: 404.html  about.html  bugs.html  contents.html  copyright.html  download.html  genindex-A.html  genindex-B.html  genindex-C.html  genindex-D.html  genindex-E.html  genindex-F.html  genindex-G.html  genindex-H.html  genindex-I.html  genindex-J.html  genindex-K.html  genindex-L.html  genindex-M.html  genindex-N.html  genindex-O.html  genindex-P.html  genindex-Q.html  genindex-R.html  genindex-S.html  genindex-Symbols.html  genindex-T.html  genindex-U.html  genindex-V.html  genindex-W.html  genindex-X.html  genindex-Y.html  genindex-Z.html  genindex-_.html  genindex-all.html  genindex.html  glossary.html  improve-page-nojs.html  improve-page.html  index.html  (+4 more)
modules/01-basics-and-types/: test_practice.py  tutorial.ipynb
modules/02-functional-features/: test_practice.py  tutorial.ipynb
modules/03-oop/: test_practice.py  tutorial.ipynb
modules/04-interfaces-and-abstraction/: test_practice.py  tutorial.ipynb
modules/05-modules-and-packages/: run_test.py  test_practice.py  tutorial.ipynb
modules/06-decorators-and-context-managers/: conftest.py  run_test.py  test_practice.py  tutorial.ipynb
modules/07-type-hints/: run_test.py  test_practice.py  tutorial.ipynb
modules/08-concurrency-and-parallelism/: run_test.py  test_practice.py  tutorial.ipynb
modules/09-asyncio/: run_test.py  (+2 more)
scripts/: run_all.py
(+219 files in other folders)
