[project]
name = "py-tuto-4-java-guy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
test-all = "scripts.run_all:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "nbformat>=5.0",
    "ruff>=0.9",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["modules"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
ignore_missing_imports = true
